# rust-crud-api

./: Cargo.toml  README.md  routes.http
migrations/: 20241026190841_create_users_table.sql
src/: main.rs
src/config/: database.rs
src/controllers/: auth_controller.rs  mod.rs  post_controller.rs  user_controller.rs
src/entities/: login_entity.rs  mod.rs  post_entity.rs  user_entity.rs
src/errors_handler/: errors.rs
src/middlewares/: errors.rs
src/repository/: post_repository.rs  user_repository.rs
src/routes/: mod.rs  post_routes.rs  user_routes.rs
src/services/: auth_service.rs  mod.rs  post_service.rs  user_service.rs
