[package]
name = "crud-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-actix-native-tls", "macros", "migrate", "chrono", "time"] }
dotenv = "0.15"
anyhow = "1.0"
env_logger = "0.9"
log = "0.4"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15.1"